# spreadsheet

./: README.md  example.csv  foo.py  pyproject.toml
sheet/: __main__.py  csv.py  expression.py  input.py  sheet.py  term.py
